--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -9569,6 +9569,12 @@
     <Content Include="Areas\RRHH\Views\Empleado\_GridViewPartial_Rubro_importacion.cshtml" />
     <Content Include="Areas\Facturacion\Views\NotaDeDebitoFacturacion\Importar.cshtml" />
     <Content Include="Areas\Facturacion\Views\NotaDeDebitoFacturacion\_GridViewPartial_Factura_importacion.cshtml" />
+    <Content Include="Areas\RRHH\Views\ControlDeMarcaciones\_GridViewPartial_control_marcaciones.cshtml" />
+    <Content Include="Areas\RRHH\Views\ControlDeMarcaciones\_GridViewPartial_control_marcaciones_det.cshtml" />
+    <Content Include="Areas\RRHH\Views\ControlDeMarcaciones\Nuevo.cshtml" />
+    <Content Include="Areas\RRHH\Views\ControlDeMarcaciones\Modificar.cshtml" />
+    <Content Include="Areas\RRHH\Views\ControlDeMarcaciones\Index.cshtml" />
+    <Content Include="Areas\RRHH\Views\ControlDeMarcaciones\Anular.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile1.pubxml" />
@@ -9652,7 +9658,6 @@
     <Folder Include="Areas\Reportes\Models\" />
     <Folder Include="Areas\RRHH\Models\" />
     <Folder Include="Areas\RRHH\Views\AprobacionPrestamos\" />
-    <Folder Include="Areas\RRHH\Views\ControlDeMarcaciones\" />
     <Folder Include="Areas\RRHH\Views\SancionesPorAtraso\" />
     <Folder Include="Areas\SeguridadAcceso\Models\" />
     <Folder Include="Content\file\" />
