--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -9582,7 +9582,6 @@
     <Content Include="Areas\RRHH\Views\ControlDeMarcaciones\Modificar.cshtml" />
     <Content Include="Areas\RRHH\Views\ControlDeMarcaciones\Index.cshtml" />
     <Content Include="Areas\RRHH\Views\ControlDeMarcaciones\Anular.cshtml" />
-
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile1.pubxml" />
@@ -9699,6 +9698,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Properties\licenses.licx" />
     <EmbeddedResource Include="Reportes\ActivoFijo\ACTF_001_Rpt.resx">
       <DependentUpon>ACTF_001_Rpt.cs</DependentUpon>
     </EmbeddedResource>
