--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -9582,6 +9582,8 @@
     <Content Include="Areas\RRHH\Views\ControlDeMarcaciones\Modificar.cshtml" />
     <Content Include="Areas\RRHH\Views\ControlDeMarcaciones\Index.cshtml" />
     <Content Include="Areas\RRHH\Views\ControlDeMarcaciones\Anular.cshtml" />
+    <Content Include="Areas\CuentasPorPagar\Views\NotaDebito\Importar.cshtml" />
+    <Content Include="Areas\CuentasPorPagar\Views\NotaDebito\_GridViewPartial_notadebito_importacion.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile1.pubxml" />
