--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -9608,6 +9608,7 @@
     <Content Include="Areas\Reportes\Views\CuentasPorPagarReportes\CXP_011.cshtml" />
     <Content Include="Areas\CuentasPorPagar\Views\Proveedor\_CmbCtaCbleCXP_Proveedor.cshtml" />
     <Content Include="Areas\CuentasPorPagar\Views\Proveedor\_CmbCtaCbleGasto_Proveedor.cshtml" />
+    <Content Include="Areas\Contabilidad\Views\ComprobanteContable\_CmbCuenta_comprobante_contable.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile1.pubxml" />
