--- a/ERP/Core.Erp.Data/Core.Erp.Data.csproj
+++ b/ERP/Core.Erp.Data/Core.Erp.Data.csproj
@@ -1805,6 +1805,9 @@
     <Compile Include="vwct_cbtecble_con_ctacble_acreedora.cs">
       <DependentUpon>Model_contabilidad.tt</DependentUpon>
     </Compile>
+    <Compile Include="vwct_cbtecble_det.cs">
+      <DependentUpon>Model_contabilidad.tt</DependentUpon>
+    </Compile>
     <Compile Include="vwct_RevisionContableFacturas.cs">
       <DependentUpon>Model_contabilidad.tt</DependentUpon>
     </Compile>
