--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -9611,6 +9611,7 @@
     <Content Include="Areas\Contabilidad\Views\ComprobanteContable\_CmbCuenta_comprobante_contable.cshtml" />
     <Content Include="Areas\CuentasPorPagar\Views\Deudas\_CmbCuenta_Deuda.cshtml" />
     <Content Include="Areas\CuentasPorPagar\Views\OrdenPago\_CmbCuenta_OP.cshtml" />
+    <Content Include="Areas\Caja\Views\ConciliacionCaja\_CmbFlujo_ConciliacionCaja.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile1.pubxml" />
