--- a/ERP/Core.Erp.Info/Core.Erp.Info.csproj
+++ b/ERP/Core.Erp.Info/Core.Erp.Info.csproj
@@ -157,6 +157,7 @@
     <Compile Include="CuentasPorPagar\cp_retencion_det_Info.cs" />
     <Compile Include="CuentasPorPagar\cp_retencion_Info.cs" />
     <Compile Include="CuentasPorPagar\cp_retencion_x_ct_cbtecble_Info.cs" />
+    <Compile Include="CuentasPorPagar\cp_SolicitudPagoDet_Info.cs" />
     <Compile Include="CuentasPorPagar\cp_SolicitudPago_Info.cs" />
     <Compile Include="CuentasPorPagar\cp_TipoDocumento_Info.cs" />
     <Compile Include="Facturacion\fa_CambioProductoDet_Info.cs" />
