--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -9612,6 +9612,7 @@
     <Content Include="Areas\CuentasPorPagar\Views\Deudas\_CmbCuenta_Deuda.cshtml" />
     <Content Include="Areas\CuentasPorPagar\Views\OrdenPago\_CmbCuenta_OP.cshtml" />
     <Content Include="Areas\Caja\Views\ConciliacionCaja\_CmbFlujo_ConciliacionCaja.cshtml" />
+    <Content Include="Areas\Inventario\Views\IngresoInventario\Importar.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile1.pubxml" />
