--- a/ERP/Core.Erp.Data/Core.Erp.Data.csproj
+++ b/ERP/Core.Erp.Data/Core.Erp.Data.csproj
@@ -606,6 +606,7 @@
     <Compile Include="General\tb_sis_reporte_Data.cs" />
     <Compile Include="General\tb_sis_reporte_diseno_Data.cs" />
     <Compile Include="General\tb_sis_reporte_x_seg_usuario_Data.cs" />
+    <Compile Include="General\tb_sis_reporte_x_tb_empresa_Data.cs" />
     <Compile Include="General\tb_sucursal_Data.cs" />
     <Compile Include="General\tb_TarjetaCredito_Data.cs" />
     <Compile Include="General\tb_TarjetaCredito_x_cp_proveedor_Data.cs" />
@@ -1663,6 +1664,9 @@
       <DependentUpon>Model_general.tt</DependentUpon>
     </Compile>
     <Compile Include="tb_sis_reporte_x_seg_usuario.cs">
+      <DependentUpon>Model_general.tt</DependentUpon>
+    </Compile>
+    <Compile Include="tb_sis_reporte_x_tb_empresa.cs">
       <DependentUpon>Model_general.tt</DependentUpon>
     </Compile>
     <Compile Include="tb_sucursal.cs">
