--- a/ERP/Core.Erp.Info/Core.Erp.Info.csproj
+++ b/ERP/Core.Erp.Info/Core.Erp.Info.csproj
@@ -219,6 +219,7 @@
     <Compile Include="General\tb_sis_reporte_diseno_Info.cs" />
     <Compile Include="General\tb_sis_reporte_Info.cs" />
     <Compile Include="General\tb_sis_reporte_x_seg_usuario_Info.cs" />
+    <Compile Include="General\tb_sis_reporte_x_tb_empresa_Info.cs" />
     <Compile Include="General\tb_sucursal_Info.cs" />
     <Compile Include="General\tb_TarjetaCredito_Info.cs" />
     <Compile Include="General\tb_TarjetaCredito_x_cp_proveedor_Info.cs" />
