--- a/ERP/Core.Erp.Data/Core.Erp.Data.csproj
+++ b/ERP/Core.Erp.Data/Core.Erp.Data.csproj
@@ -1116,6 +1116,7 @@
     <Compile Include="Reportes\CuentasPorPagar\CXP_009_Data.cs" />
     <Compile Include="Reportes\CuentasPorPagar\CXP_010_Data.cs" />
     <Compile Include="Reportes\CuentasPorPagar\CXP_011_Data.cs" />
+    <Compile Include="Reportes\CuentasPorPagar\CXP_012_Data.cs" />
     <Compile Include="Reportes\Facturacion\FAC_001_Data.cs" />
     <Compile Include="Reportes\Facturacion\FAC_002_Data.cs" />
     <Compile Include="Reportes\Facturacion\FAC_003_Data.cs" />
@@ -1901,6 +1902,9 @@
       <DependentUpon>Model_reportes.tt</DependentUpon>
     </Compile>
     <Compile Include="VWCXP_011.cs">
+      <DependentUpon>Model_reportes.tt</DependentUpon>
+    </Compile>
+    <Compile Include="VWCXP_012.cs">
       <DependentUpon>Model_reportes.tt</DependentUpon>
     </Compile>
     <Compile Include="VWFAC_001.cs">
