--- a/ERP/Core.Erp.Info/Core.Erp.Info.csproj
+++ b/ERP/Core.Erp.Info/Core.Erp.Info.csproj
@@ -322,6 +322,7 @@
     <Compile Include="Reportes\CuentasPorPagar\CXP_009_resumen_Info.cs" />
     <Compile Include="Reportes\CuentasPorPagar\CXP_010_Info.cs" />
     <Compile Include="Reportes\CuentasPorPagar\CXP_011_Info.cs" />
+    <Compile Include="Reportes\CuentasPorPagar\CXP_012_Info.cs" />
     <Compile Include="Reportes\Facturacion\FAC_001_Info.cs" />
     <Compile Include="Reportes\Facturacion\FAC_002_Info.cs" />
     <Compile Include="Reportes\Facturacion\FAC_003_Info.cs" />
