--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -9618,6 +9618,7 @@
     <Content Include="Areas\General\Views\Sucursal\_CmbCuenta_Sucursal.cshtml" />
     <Content Include="Areas\General\Views\Reporte\Disenar.cshtml" />
     <Content Include="Areas\Reportes\Views\CuentasPorPagarReportes\CXP_012.cshtml" />
+    <Content Include="Areas\Facturacion\Views\Cliente\_cmb_parroquia.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile1.pubxml" />
