--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -9625,6 +9625,8 @@
     <Content Include="Areas\General\Views\Reporte\Disenar.cshtml" />
     <Content Include="Areas\Reportes\Views\CuentasPorPagarReportes\CXP_012.cshtml" />
     <Content Include="Areas\Facturacion\Views\Cliente\_cmb_parroquia.cshtml" />
+    <Content Include="Areas\Caja\Views\CajaMovimientoEgreso\_GridViewPartial_egreso_op_x_cruzar.cshtml" />
+    <Content Include="Areas\Caja\Views\CajaMovimientoEgreso\_GridViewPartial_egreso_op.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile1.pubxml" />
