--- a/ERP/Core.Erp.Info/Core.Erp.Info.csproj
+++ b/ERP/Core.Erp.Info/Core.Erp.Info.csproj
@@ -56,6 +56,7 @@
     <Compile Include="ActivoFijo\Af_Retiro_Activo_Info.cs" />
     <Compile Include="ActivoFijo\Af_Venta_Activo_Info.cs" />
     <Compile Include="Banco\ba_Banco_Cuenta_Info.cs" />
+    <Compile Include="Banco\ba_Banco_Cuenta_x_tb_sucursal_Info.cs" />
     <Compile Include="Banco\ba_Caja_Movimiento_x_Cbte_Ban_x_Deposito_Info.cs" />
     <Compile Include="Banco\ba_CatalogoTipo_Info.cs" />
     <Compile Include="Banco\ba_Catalogo_Info.cs" />
