--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -9653,6 +9653,8 @@
     <Content Include="Areas\RRHH\Views\PrestamosConsultas\_GridViewPartial_prestamos_consulta.cshtml" />
     <Content Include="Areas\RRHH\Views\PrestamosConsultas\_GridViewPartial_prestamos_consulta_det.cshtml" />
     <Content Include="Areas\RRHH\Views\PrestamosConsultas\_CmbEmpleado_prestamo_consulta.cshtml" />
+    <Content Include="Areas\RRHH\Views\Empleado\_CmbArea.cshtml" />
+    <Content Include="Areas\RRHH\Views\Empleado\_CmbDivision.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile1.pubxml" />
