--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -9657,6 +9657,7 @@
     <Content Include="Areas\RRHH\Views\Empleado\_CmbDivision.cshtml" />
     <Content Include="Areas\RRHH\Views\Empleado\_CmbDepartamento.cshtml" />
     <Content Include="Areas\CuentasPorPagar\Views\NotaDebito\_CmbCuenta_ND.cshtml" />
+    <Content Include="Areas\Banco\Views\TipoFlujoBanco\_GridViewPartial_flujo_det.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile1.pubxml" />
