--- a/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
+++ b/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Banco\ba_parametros_Bus.cs" />
     <Compile Include="Banco\ba_Talonario_cheques_x_banco_Bus.cs" />
     <Compile Include="Banco\ba_TipoFlujo_Bus.cs" />
+    <Compile Include="Banco\ba_TipoFlujo_Plantilla_Bus.cs" />
     <Compile Include="Banco\ba_tipo_nota_Bus.cs" />
     <Compile Include="Caja\caj_Caja_Bus.cs" />
     <Compile Include="Caja\caj_Caja_Movimiento_Bus.cs" />
