--- a/ERP/Core.Erp.Data/Core.Erp.Data.csproj
+++ b/ERP/Core.Erp.Data/Core.Erp.Data.csproj
@@ -128,6 +128,8 @@
     <Compile Include="Banco\ba_parametros_Data.cs" />
     <Compile Include="Banco\ba_Talonario_cheques_x_banco_Data.cs" />
     <Compile Include="Banco\ba_TipoFlujo_Data.cs" />
+    <Compile Include="Banco\ba_TipoFlujo_PlantillaDet_Data.cs" />
+    <Compile Include="Banco\ba_TipoFlujo_Plantilla_Data.cs" />
     <Compile Include="Banco\ba_tipo_nota_Data.cs" />
     <Compile Include="ba_Banco_Cuenta.cs">
       <DependentUpon>Model_banco.tt</DependentUpon>
