--- a/ERP/Core.Erp.Data/Core.Erp.Data.csproj
+++ b/ERP/Core.Erp.Data/Core.Erp.Data.csproj
@@ -1760,6 +1760,9 @@
     <Compile Include="vwba_Talonario_cheques_x_banco_ID.cs">
       <DependentUpon>Model_banco.tt</DependentUpon>
     </Compile>
+    <Compile Include="vwba_TipoFlujoPlantillaDet.cs">
+      <DependentUpon>Model_banco.tt</DependentUpon>
+    </Compile>
     <Compile Include="VWCAJ_001.cs">
       <DependentUpon>Model_reportes.tt</DependentUpon>
     </Compile>
