--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -9658,6 +9658,7 @@
     <Content Include="Areas\RRHH\Views\Empleado\_CmbDepartamento.cshtml" />
     <Content Include="Areas\CuentasPorPagar\Views\NotaDebito\_CmbCuenta_ND.cshtml" />
     <Content Include="Areas\Banco\Views\TipoFlujoBanco\_GridViewPartial_flujo_det.cshtml" />
+    <Content Include="Areas\Reportes\Views\RRHHReportes\_CmbArea_roles.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile1.pubxml" />
