--- a/ERP/Core.Erp.Data/Core.Erp.Data.csproj
+++ b/ERP/Core.Erp.Data/Core.Erp.Data.csproj
@@ -530,6 +530,9 @@
     <Compile Include="fa_factura_x_ct_cbtecble.cs">
       <DependentUpon>Model_facturacion.tt</DependentUpon>
     </Compile>
+    <Compile Include="fa_factura_x_cxc_cobro.cs">
+      <DependentUpon>Model_facturacion.tt</DependentUpon>
+    </Compile>
     <Compile Include="fa_factura_x_fa_guia_remision.cs">
       <DependentUpon>Model_facturacion.tt</DependentUpon>
     </Compile>
