--- a/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
+++ b/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
@@ -383,6 +383,7 @@
     <Compile Include="RRHH\ro_empleado_novedad_Bus.cs" />
     <Compile Include="RRHH\ro_empleado_novedad_det_Bus.cs" />
     <Compile Include="RRHH\ro_empleado_proyeccion_gastos_det_Bus.cs" />
+    <Compile Include="RRHH\ro_empleado_x_division_x_area_Bus.cs" />
     <Compile Include="RRHH\ro_empleado_x_horario_Bus.cs" />
     <Compile Include="RRHH\ro_empleado_proyeccion_gastos_Bus.cs" />
     <Compile Include="RRHH\ro_empleado_x_ro_rubro_Bus.cs" />
