--- a/ERP/Core.Erp.Info/Core.Erp.Info.csproj
+++ b/ERP/Core.Erp.Info/Core.Erp.Info.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Banco\ba_parametros_Info.cs" />
     <Compile Include="Banco\ba_Talonario_cheques_x_banco_Info.cs" />
     <Compile Include="Banco\ba_TipoFlujo_Info.cs" />
+    <Compile Include="Banco\ba_TipoFlujo_Movimiento_Info.cs" />
     <Compile Include="Banco\ba_TipoFlujo_PlantillaDet_Info.cs" />
     <Compile Include="Banco\ba_TipoFlujo_Plantilla_Info.cs" />
     <Compile Include="Banco\ba_tipo_nota_Info.cs" />
