--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -9675,6 +9675,10 @@
     <Content Include="Areas\Banco\Views\TipoFlujoMovimiento\Modificar.cshtml" />
     <Content Include="Areas\Banco\Views\TipoFlujoMovimiento\Anular.cshtml" />
     <Content Include="Areas\CuentasPorPagar\Views\SolicitudPago\_GridViewPartial_solicitud_pago.cshtml" />
+    <Content Include="Areas\RRHH\Views\Empleado\_CmbDivision_IngresoCompartido.cshtml" />
+    <Content Include="Areas\RRHH\Views\Empleado\_CmbArea_IngresoCompartido.cshtml" />
+    <Content Include="Areas\RRHH\Views\Empleado\_GridViewPartial_IngresoCompartido.cshtml" />
+    <Content Include="Areas\Banco\Views\TipoFlujoPlantilla\_GridViewPartial_TipoFlujoPlantilla_Asignar.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile1.pubxml" />
